force-app/main/default/objects/SRT_Translation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Integration Builder</fullName>
            </value>
            <value>
                <fullName>Wall Builder</fullName>
            </value>
            <value>
                <fullName>Intapp Time</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open - Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>