force-app/main/default/objects/SRT_Translation__c/fields/Query__c.field-meta.xml
<CustomField>
    <fullName>Query__c</fullName>
    <description>Custom query</description>
    <label>Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>