force-app/main/default/objects/SRT_Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Key_Value__c</columns>
    <columns>Product__c</columns>
    <columns>Data_Type__c</columns>
    <columns>Pull_into_Gainsight__c</columns>
    <columns>Query__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>